--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="color:blue"
 
   <h1>Welcome to My Web Page</h1>
-img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg"
+<img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg">
   <p>
   This page is pretty boring now, but just you wait!
   </p>
