--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body style="color:blue"
 
   <h1>Welcome to My Web Page</h1>
-<img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg">
+
   <p>
-  This page is pretty boring now, but just you wait!
+  please enjoy this picture of a floating market
   </p>
-  
+  <img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg">
 </body>  
 </html>
