--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
   <img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg">
 </body>  
 </html>
+<center>
+  <a href="/fPNssWffWXdJB8qB.jpg"><img width="80%" src="/pic1.jpg"></a>
+</center>
