--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 </body>  
 </html>
 <center>
-  <a href="/artworks-fPNssWffWXdJB8qB-oj8xbA-t500x500.jpg"><img width="80%" src="/pic1.jpg"></a>
+  <a href="/nazreid.jpg"><img width="80%" src="/pic1.jpg"></a>
 </center>
