--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <title>My Favorite Web Page</title>
 </head>
 <body style="color:blue"
-
   <h1>Welcome to My Web Page</h1>
-
   <p>
   please enjoy this picture of a floating market
   </p>
@@ -15,3 +13,4 @@
 <center>
   <a href="/nazreid.jpg"><img width="80%" src="/pic1.jpg"></a>
 </center>
+<a href="https://23patj.github.io/23patj.html">Return to Index</a>
