--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 <center>
   <a href="/nazreid.jpg"><img width="80%" src="/pic1.jpg"></a>
 </center>
-<a href="https://23patj.github.io/23patj.html">Return to Index</a>
+<a href="https://23patj.github.io/23patj.html">page 2</a>
