--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<head>
-  <title>My Favorite Web Page</title>
+<head> Welcome to my page
+  <title>Pat's Web Page</title>
 </head>
-<body style="color:blue"
+<body style="color:rgb(208, 193, 33)" 
   <h1>Welcome to My Web Page</h1>
   <p>
   please enjoy this picture of a floating market
