--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
+<!DOCTYPE html>
 <html>
-<head> Welcome to my page
+<head>
   <title>Pat's Web Page</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      color: rgb(33, 37, 41); /* Darker text for better readability */
+      background-color: #add8e6; /* Light blue background */
+      font-family: 'Roboto', sans-serif; /* Professional font */
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* Centering content */
+    }
+    h1 {
+      font-size: 2.5em; /* Larger h1 size */
+      margin: 0.5em 0; /* Adjusting space around h1 */
+    }
+    img {
+      max-width: 80%; /* Responsive image width */
+      height: auto; /* Maintain aspect ratio */
+    }
+    a {
+      color: #007bff; /* Default link color */
+      text-decoration: none; /* No underline */
+    }
+    a:hover {
+      text-decoration: underline; /* Underline on hover */
+    }
+  </style>
 </head>
-<body style="color:rgb(208, 193, 33)" 
+<body>
   <h1>Welcome to My Web Page</h1>
-  <p>
-  please enjoy this picture of a floating market
-  </p>
+  <p>Please enjoy this picture of a floating market.</p>
   <img src="https://www.holidify.com/images/cmsuploads/compressed/c59366a5f7921c0ecaab37391480fb24_20190902231258.jpg">
+  <div style="text-align: center; width: 100%;"> <!-- Centering the image link -->
+    <a href="/nazreid.jpg"><img src="/pic1.jpg" alt="Additional Image"></a>
+  </div>
+  <a href="https://23patj.github.io/23patj.html">Page 2</a>
 </body>  
 </html>
-<center>
-  <a href="/nazreid.jpg"><img width="80%" src="/pic1.jpg"></a>
-</center>
-<a href="https://23patj.github.io/23patj.html">page 2</a>
