--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             console.log("Updating object: " + countobj);
             countobj.innerHTML = "<b>" + i + "</b>";
             
+        if (i<=0){ //single = assign, double == comparison
+          countobj.innerHTML = "<b font-size = '+5'>BOOM! </b>";
         }
     </script>
 </body>
