--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
             }
         }
     </script>
+<body> 
+    <h1> Change all text to comic sans </h1>
+    <button onclick="changeFont()">Change Font to Comic Sans</button>
+
+<script>
+    function changeFont() {
+        var elements = document.querySelectorAll('body *');
+
+        for (var i = 0; i < elements.length; i++) {
+            elements[i].style.fontFamily = 'Comic Sans MS, cursive';
+        }
+    }
+</script>
+</body>
 </body>
 </html>
 </body>  
