--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </script>
 <body> 
     <h1> Change all text to comic sans </h1>
-    <button onclick="changeFont()">Change Font to Comic Sans</button>
+    <button onclick="changeFont()">Change</button>
 
 <script>
     function changeFont() {
