--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div style="text-align: center; width: 100%;"> <!-- Centering the image link -->
     <a href="/nazreid.jpg"><img src="/pic1.jpg" alt="Additional Image"></a>
   </div>
-  <a href="https://23patj.github.io/23patj.html">Page 2</a>
+  <a href="https://23patj.github.io/23patj.html">Photo carousel</a>
   <a href="https://www.youtube.com/watch?v=IVdJ6Z9jluc">Learn why MJ is greater than LeBron James</a>
   <a href="https://weather.com/weather/tenday/l/Bangkok+Thailand+THXX0002">Bangkok Weather</a>
 <body>
