--- a/23patj.html
+++ b/23patj.html
@@ -1,6 +1,16 @@
 <a href="https://23patj.github.io/">return to index</a>
 <title>Photo Carousel</title>
   <style>
+    body {
+      font-family: 'Times New Roman', Times, serif; 
+      background-image: url('https://images.kinorium.com/movie/shot/109024/h280_48919628.jpg?21619545432'); 
+      background-size: cover; 
+      background-position: center; 
+      background-repeat: no-repeat; 
+      margin: 0;
+      padding: 0;
+    }
+
     .carousel-container {
         width: 80%;
         margin: 0 auto;
@@ -25,16 +35,15 @@
         border-radius: 5px;
         cursor: pointer;
     }
-    .rating-container {
-      text-align: center;
-    }
-    .star {
-      font-size: 24px;
-      color: gold;
-      cursor: pointer;
-    }
-    .rated {
-      color: orange;
+    .end-text {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 24px;
+        font-weight: bold;
+        color: white;
+        text-align: center;
     }
   </style>
 </head>
@@ -49,18 +58,12 @@
 
 <button class="carousel-button" onclick="nextSlide()">Next</button>
 
-<div class="rating-container">
-  <span class="star" onclick="ratePhoto(1)">★</span>
-  <span class="star" onclick="ratePhoto(2)">★</span>
-  <span class="star" onclick="ratePhoto(3)">★</span>
-  <span class="star" onclick="ratePhoto(4)">★</span>
-  <span class="star" onclick="ratePhoto(5)">★</span>
-</div>
+<div id="endText" class="end-text"></div>
 
 <script>
     var currentSlide = 0;
     var slides = document.querySelectorAll('.carousel-slide');
-    var ratings = [0, 0, 0, 0]; // Store ratings for each photo
+    var clickCounter = 0;
 
     function showSlide(index) {
         if (index >= 0 && index < slides.length) {
@@ -71,26 +74,20 @@
     }
 
     function nextSlide() {
+        clickCounter++;
         var nextIndex = currentSlide + 1;
         if (nextIndex >= slides.length) {
             nextIndex = 0; // Loop back to the first slide
         }
         showSlide(nextIndex);
-    }
 
-    function ratePhoto(index) {
-      // Update the rating for the current photo
-      ratings[currentSlide] = index;
-
-      // Update the star colors based on the rating
-      var stars = document.querySelectorAll('.star');
-      for (var i = 0; i < 5; i++) {
-        if (i < index) {
-          stars[i].classList.add('rated');
-        } else {
-          stars[i].classList.remove('rated');
+        if (clickCounter === 6) {
+            document.getElementById('endText').innerText = 'The End.';
+            document.body.style.backgroundImage = "url('https://example.com/your-image.jpg')";
+            document.body.style.backgroundSize = 'cover';
+            document.body.style.backgroundPosition = 'center';
+            document.body.style.backgroundRepeat = 'no-repeat';
         }
-      }
     }
 </script>
 
